Fix some blog styling on mobile, add OpenGraph metadata to include blog post image

--- a/input/assets/css/main.css
+++ b/input/assets/css/main.css
@@ -459,7 +459,8 @@ body {
 }
 
 .postSynopsis {
-  margin-left: 20px;
+  margin-left: 0px;
+  width: 100%;
 }
 
 .postText {
@@ -474,4 +475,9 @@ body {
   .postSummary {
     flex-wrap: nowrap;
   }
+
+  .postSynopsis {
+    margin-left: 20px;
+    width: auto;
+  }  
 }
